--- a/src/main.css
+++ b/src/main.css
@@ -13,12 +13,23 @@ body.fsss-body::-webkit-scrollbar-track {
   background-color: #111;
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s linear .3s, opacity .3s ease-out;
+  transition:
+    visibility 0s linear .3s,
+    opacity .3s ease-out,
+    background-color .3s ease-out
+    ;
 }
 body.fsss-body .fsss-container {
   visibility: visible;
   opacity: 1;
-  transition: visibility 0s, opacity .3s ease-out;
+  transition:
+    visibility 0s,
+    opacity .3s ease-out
+    background-color .3s ease-out
+    ;
+}
+.fsss-container.fsss-sugar {
+  background-color: #43c1b4;
 }
 .fsss-container div {
   box-sizing: border-box;
@@ -79,4 +90,21 @@ body.fsss-body .fsss-container {
 .fsss-close:hover {
   color: white;
   text-shadow: 1px 1px 2px white, -1px -1px 2px white;
+}
+
+.fsss-intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 4em;
+}
+.fsss-title, .fsss-subtitle {
+    max-width: 60%;
+}
+.fsss-title {
+  font-size: 4em;
+}
+.fsss-text {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+  color: white;
 }
